--- a/login.html
+++ b/login.html
@@ -8,43 +8,34 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="css/styles.css">   
     <link rel="stylesheet" href="css/skills_bar.fill_variations.css">
-    <title>log in</title>
+    <title>Iniciar sesión</title>
 </head>
 
 <body>
     <script src="https://kit.fontawesome.com/f39a4936aa.js" crossorigin="anonymous"></script>
     <div class="form-container">
-        <form>
+        <form class="login">
             <div class="form-title">
-                <h1>LOG IN</h1>
+                <h1>Iniciar sesión</h1>
             </div>
             <div class="input-container">
-                <label class="text-label" for="#correo">
+                <label class="text-label" for="#mail">
                     <span>Correo</span>
-                    <input type="text" class="text-input" id="correo">
+                    <input type="text" class="text-input" id="mail">
                 </label>
-                <div class="contraseñas">
-                    <div class="contraseña-container">
-                        <label class="text-label" for="#contraseña">
-                            <span>Contraseña</span>
-                            <input type="password" class="text-input" id="contraseña">
-                        </label>
-                    </div>
-                    <div></div>
-                    <div class="contraseña-container ">
-                        <label class="text-label" for="#contraseña">
-                            <span>Confirmar contraseña</span>
-                            <input type="password" class="text-input" id="contraseña">
-                            <i class="fa-solid fa-eye-slash" onclick="mostrarContraseña()"></i>
-                        </label>
-                    </div>
+                <div class="paswords">
+                    <label class="text-label" for="#password">
+                        <span>Contraseña</span>
+                        <input type="password" class="text-input" id="password">
+                        <i class="fa-solid fa-eye" onclick="showPassword()"></i>
+                    </label>
                 </div>
             </div>
             <br>
-            <p class="cambio-login-register">¿Aún no tienes una cuenta? Registrate <a href="register.html">aquí</a></p>
+            <p class="switch-login-register">¿Aún no tienes una cuenta? Registrate <a href="register.html">aquí.</a></p>
             <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
+                <label class="form-check-label" for="#flexCheckDefault">
                     Recordar contraseña
                 </label>
             </div>
