--- a/register.html
+++ b/register.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>Register</title>
+    <link rel="stylesheet" href="css/styles.css">   
+    <link rel="stylesheet" href="css/skills_bar.fill_variations.css">
+    <title>Registrarse</title>
 </head>
 
 <body>
@@ -15,41 +16,36 @@
     <div class="form-container">
         <form>
             <div class="form-title">
-                <h1>SIGN IN</h1>
+                <h1>Registrarse</h1>
             </div>
             <div class="input-container">
-                <label class="text-label" for="#correo">
-                    <span>Nombre completo</span>
-                    <input type="text" class="text-input" id="nombre">
-                </label>
-                <label class="text-label" for="#correo">
+                <label class="text-label" for="#mail">
                     <span>Correo</span>
-                    <input type="text" class="text-input" id="correo">
+                    <input type="text" class="text-input" id="mail">
                 </label>
-                <div class="contraseñas">
-                    <div class="contraseña-container">
-                        <label class="text-label" for="#contraseña">
-                            <span>Contraseña</span>
-                            <input type="password" class="text-input" id="contraseña">
-                        </label>
-                    </div>
-                    <div class="contraseña-container ">
-                        <label class="text-label" for="#contraseña">
-                            <span>Confirmar contraseña</span>
-                            <input type="password" class="text-input" id="contraseña">
-                            <i class="fa-solid fa-eye-slash" onclick="mostrarContraseña()"></i>
-                        </label>
-                    </div>
+                <div class="passwords grid-2">
+                    <label class="text-label" for="#password">
+                        <span>Contraseña</span>
+                        <input type="password" class="text-input" id="password">
+                    </label>
+                    <label class="text-label" for="#confirm-password">
+                        <span>Confirmar contraseña</span>
+                        <input type="password" class="text-input" id="confirm-password">
+                        <i class="fa-solid fa-eye" onclick="showPassword()"></i>
+                    </label>
                 </div>
             </div>
-            <br>
-            <p class="cambio-login-register">¿Aún no tienes una cuenta? Registrate <a href="login.html">aquí</a></p>
-            <div class="form-check">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                    Recordar contraseña
-                </label>
+            <div class="grid-2 invisible"  id="strength-password">
+                <div class="strength-password">
+                    <div class="strength" id="strength-password-bar"></div>
+                    <p id="strength-password-text" class="strength-text"></p>
+                </div>
+                <div class="samePassword">
+                    <p id="same-password-text" class="strength-text"></p>
+                </div>  
             </div>
+            <br>
+            <p class="switch-login-register">¿Ya tienes una cuenta? Inicia sesión <a href="login.html">aquí.</a></p>
             <div class="btn-container">
                 <button class="btnn">Enviar</button>
             </div>
